# pomodoro-pulse

./: CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: SettingsPanel.tsx  Sidebar.tsx  StatsChart.tsx  TitleBar.tsx
src/lib/: analyticsRange.ts
tests/: App.export-range.test.tsx  StatsChart.test.tsx  analyticsRange.test.ts  setup.ts
